--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ nav a{
   color: black;
   font-weight: bold;
   text-decoration: none; 
+
 }
 
 nav a:hover{
@@ -48,17 +49,23 @@ nav a:hover{
   /*Your code here - position relative to the parent */
   position: absolute;
   /*Your code here - place 40px higher */
-  
+  margin: -40px;
 }
 
 /*Your code here*/
 /*Add the selector and rule to move the skip 
 link to the exact top of the page.*/
+.skip a:focus{
+  margin: 0px;
+}
  
 
 /*Your code here*/
 /*Add the selector and code to put a 2px black 
 border around all elements in focus.*/
+a:focus{
+  border: 2px solid black;
+}
   
 
 footer{
@@ -94,6 +101,7 @@ header{
   background-image: url("../images/header.jpg");
   /* Span one row */
   grid-row: 2/span 1;
+  /* Span all columns */
   grid-column: 1/-1;
 }
 
@@ -110,11 +118,9 @@ header p{
   /*Your code here  */
   /* See documentation for mobile view */
   display: grid;
-  align-items: center;
   grid-template-columns: 100px 400px 100px;
-  grid-template-rows: 30px auto auto auto auto auto 100px;
+  grid-template-rows: 30px repeat(5, auto) 100px;
   grid-row-gap: 15px;
-  width: 95vw;
   overflow: hidden;
 
 }
@@ -150,8 +156,9 @@ header p{
   padding: 30px;
   /*Your code here:*/
   /*Align the content in the center */
-  text-align: center;
-
+  /* text-align: center;
+  vertical-align: middle; */
+  margin: auto;
 }
 
 
@@ -162,8 +169,8 @@ header p{
   /*Your code here */
   /* See documentation for desktop view */ 
     display: grid;
-    grid-template-columns: 0px auto 500px auto 50px;
-    grid-template-rows: 0px 400px 400px 400px 400px 400px 100px;
+    grid-template-columns: 50px auto 500px auto 50px;
+    grid-template-rows: 70px 400px 400px 400px 400px 400px 100px;
   }
 
   nav{
@@ -177,15 +184,34 @@ header p{
   /*Your code here */
   /* See documentation for desktop view */ 
     grid-column: 3/span 2;
+    
   }
 
   .about-image, .clients-image, .method, .contact{
     /*Your code here */
     /* See documentation for desktop view */ 
       grid-column: 2/span 2;
-      overflow: hidden;
     }
 
+  /* img{
+    overflow: hidden;    
+  }
+  .about, .about-image{
+    grid-row: 3/span 1;
+    overflow: hidden;
+  }
+  .method, .method-image{
+    grid-row: 4/span 1;
+    overflow: hidden;
+  }
+  .clients, .clients-image{
+    grid-row: 5/span 1;
+    overflow: hidden;
+  }
+  .contact, .contact-image{
+    grid-row: 6/span 1;
+    overflow: hidden;
+  } */
 
 }  /*End the media query*/
 
